changes in pricing plans

--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
 									<div class=container>
 										<h2 id=buy class="block-heading text-center">КАК ПРИОБРЕСТИ</h2>
 										<div class=row>
-											<div class="col-md-6 ">												
+											<div class="col-sm-4">												
 												<div class="to-buy-heading">
 													Просто позвоните:
 												</div>
 												<div class=clearfix>
 													<div class=pull-left><div class="phone-img pull-left"></div></div>
 													<div class="pull-left text-left m-t-5 m-l-10 f-s-20">
-														0-800-210-309<br/><sup>(Бесплатно c мобильных и стационарных телефонов)</sup>
+														0-800-210-309<br/><sup>(Бесплатно)</sup>
 													</div>
 												</div>
 												<div class=clearfix>
@@ -304,14 +304,14 @@
 												<div class=clearfix>
 													<div class=pull-left><div class="viber-img pull-left"></div></div>
 													<div class="pull-left text-left m-t-5 m-l-10 f-s-20">
-														+38 (093) 200-01-33&nbsp;("Viber")
+														+38 (093) 200-01-33<br><sup>("Viber")</sup>
 													</div>
 												</div>
 											</div>
-											<div class="col-md-6 text-center">
+											<div class="col-sm-8 text-center">
 												<div class="to-buy-heading">
-												Актуальные цены на &nbsp;24/01/2017 </div>
-												<table class="table table-bordered prices">
+												Актуальные цены на 24/01/2017 </div>
+												<!-- <table class="table table-bordered prices">
 													<tbody>
 														<tr>
 															<td>50грамм</td>
@@ -326,7 +326,38 @@
 															<td>506грн</td>
 														</tr>
 													</tbody>
-												</table>
+												</table> -->
+												<div class="price">
+													<div class="row">
+														<div class="col-sm-3">
+															<div class="price-wrap">
+																<div class="price-img"><img src="images/men-cream.png" alt=""></div>
+																<div class="price-caption">
+																	<div class="price-weight1">Вес:<span>50 грамм</span></div>
+																	<div class="price-size1">Цена:<span>147 грн</span></div>
+																</div>
+															</div>
+														</div>
+														<div class="col-sm-4"> 
+															<div class="price-wrap">
+																<div class="price-img"><img src="images/men-cream.png" alt=""></div>
+																<div class="price-caption">
+																	<div class="price-weight2">Вес:<span>100 грамм</span></div>
+																	<div class="price-size2">Цена:<span>268 грн</span></div>
+																</div>
+															</div>
+														</div>
+														<div class="col-sm-5">
+															<div class="price-wrap">
+																<div class="price-img"><img src="images/men-cream.png" alt=""></div>
+																<div class="price-caption">
+																	<div class="price-weight3">Вес:<span>200 грамм</span></div>
+																	<div class="price-size3">Цена:<span>506 грн</span></div>
+																</div>																
+															</div>
+														</div>
+													</div>
+												</div>
 											</div>												
 										</div>
 									</div>
@@ -470,15 +501,15 @@
 													<div class="col-sm-12 text-center p-b-10">
 														<h2 id=contacts class="m-t-75 block-heading">НАШИ КОНТАКТЫ</h2>
 														<div class=row>
-															<div class="col-sm-4 text-left">
+															<div class="col-sm-offset-2 col-sm-4 text-left">
+															<div class="text-uppercase text-center">Телефоны для связи</div><br/>
 																<table class=table>
 																	<tbody>
 																		<tr>
 																			<td>
 																				<div class=pull-left><div class="phone-img pull-left"></div></div>
 																				<div class="pull-left text-left m-t-5 m-l-10">
-																					0-800-210-309<br/>
-																					<span class=small>(Бесплатно c мобильных и стационарных телефонов)</span>
+																					0-800-210-309<br/><sup>(Бесплатно)</sup>
 																				</div>
 																			</td>
 																		</tr>
@@ -500,7 +531,7 @@
 																			<td>
 																				<div class=pull-left><div class="viber-img pull-left"></div></div>
 																				<div class="pull-left text-left m-t-5 m-l-10">
-																					+38 (093) 200-01-33&nbsp; ("Viber")
+																					+38 (093) 200-01-33 <br/><sup>("Viber")</sup>
 																				</div>
 																			</td>
 																		</tr>
@@ -515,10 +546,9 @@
 																	</tbody>
 																</table>
 															</div>
-															<div class=col-sm-4></div>
 															<div class="col-sm-4 text-left">
-																<div class="text-left m-a grey-text">
-																	График работы колл-центра<br/><br/>
+																<div class="text-left m-a">
+																	<div class="text-uppercase text-center">График работы колл-центра</div><br/>
 																	<table class="table m-0">
 																		<tbody>
 																			<tr>
