--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@
 								</section>
 								<section class="instruction">
 									<div class=container>
+									<h2 id=instructions class="block-heading text-center">ИНСТРУКЦИЯ</h2>
+									<div class="instruction-bg">
 										<div class=row>
-											<div class="col-sm-12">
-												<h2 id=instructions class="block-heading text-center">ИНСТРУКЦИЯ</h2>
+											<div class="col-sm-8">												
 												<div class="instruction-paper">
 													<div class="instruction-heading">Показания к применению:</div>
 													<ul>
@@ -405,6 +406,7 @@
 												</div>												
 											</div>
 										</div>
+									</div>
 									</div>
 								</section>								
 								<section class="clients-info">
@@ -466,8 +468,11 @@
 										</div>
 									</div>
 									</section>
-									<section>
+									<section class="certificate">
 										<div class=container>
+										<div class="certificate-bg">
+											
+										
 											<div class=row>
 												<div class="col-sm-12 p-b-10 text-center">
 													<h2 id=documents class="block-heading">СЕРТИФИКАТЫ</h2>
@@ -492,6 +497,7 @@
 														</div>
 													</div>
 												</div>
+											</div>
 											</div>
 										</div>
 									</section>									
@@ -570,8 +576,9 @@
 														</div>
 														<div class="row text-left">
 															<div class=col-sm-12>
-																г.Харьков, Клочковская 192а, БЦ 'Мiсто' <div id=our-location-map></div>
-																<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3pifGr0wnFFeKvfpys13E4SO5dLLUCFE&callback=initMap&language=ru"></script> </div>
+																г.Харьков, Клочковская 192а, БЦ 'Мiсто'
+																	<iframe width="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.4333278469408!2d36.212149815324295!3d50.021975626026936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a13c5763cf3f%3A0x3ee5955fea2ed959!2z0LLRg9C70LjRhtGPINCa0LvQvtGH0LrRltCy0YHRjNC60LAsIDE5Miwg0KXQsNGA0LrRltCyLCDQpdCw0YDQutGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgNjEwMDA!5e0!3m2!1suk!2sua!4v1485801798609" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> 
+															</div>
 															</div>
 														</div>
 													</div>
