offset in certificate

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 											
 										
 											<div class=row>
-												<div class="col-sm-12 p-b-10 text-center">
+												<div class="col-sm-offset-2 col-sm-8 p-b-10 text-center">
 													<h2 id=documents class="block-heading">СЕРТИФИКАТЫ</h2>
 													<div class="container documents-block">
 														<a href="#" class=visnovok-document>
